--- a/LESS/middle-section.less
+++ b/LESS/middle-section.less
@@ -1,11 +1,17 @@
 .below-hero-image {
   position: absolute;
-  top: 85rem;
+  top: 60rem;
   width: 100%;
 
-  @media @fromMobileDesktop {
-    top: 80rem;
-  }
+  // @media @fromMobileTablet {
+  //   top: 40rem;
+  //   margin-top: 10rem;
+  // }
+
+  // @media @fromMobileDesktop {
+  //   top: 100rem;
+  //   margin-top: 25rem;
+  // }
 
   .features {
     top: 30rem;
